fix: add padding to cv button and wrapped it in anchor tag

--- a/about.css
+++ b/about.css
@@ -1,7 +1,6 @@
 main {
   min-height: 100vh;
   padding-top: 75px; /* Match navbar height */
- 
 }
 main .about-header {
   text-align: center;
@@ -49,7 +48,7 @@ main .about-header {
 }
 
 .cv-button {
-  padding: 12px 24px;
+  padding: 15px 24px;
   background: #20305a;
   border: none;
   border-radius: 8px;
@@ -156,7 +155,7 @@ main .about-header {
 .about button {
   width: 150px;
   margin: 10px 0 0 30px;
-  padding: 5px 10px;
+  padding: 15px 10px;
   border: none;
   background: #20305a;
   color: white;
